# TorrentProxySite

./: Dockerfile  Makefile  README.md  pyproject.toml
backend/: main.py
backend/torrent_sites/: __init__.py  feature_films.py  public_domain_torrents.py  torrent_site.py  torrent_store.py
backend/utils/: __init__.py  downloader.py  local.py  movie.py  torrent_utils.py  web_scraper.py
client/: index.html
client/src/: App.css  App.jsx  index.css
client/src/Components/: Login.css  Login.jsx  SearchRedirect.jsx
client/src/Components/HomePage/: HomePage.css  HomePage.jsx
client/src/Components/LocalPage/: LocalPage.jsx  MovieCard.jsx  MovieGrid.jsx  Play.css  Play.jsx
client/src/Components/MovieDetail/: MovieDetail.css  MovieDetail.jsx  MovieDetailCard.css  MovieDetailCard.jsx  TorrentButton.css  TorrentButton.jsx
client/src/Components/MovieGrid/: MovieCard.css  MovieCard.jsx  MovieGrid.css  MovieGrid.jsx
client/src/Components/TopBar/: Search.css  Search.jsx  TopBar.css  TopBar.jsx
